--- a/style.css
+++ b/style.css
@@ -9,3 +9,47 @@ h1 {
   font-weight: 700;
   color: white;
 }
+
+.search {
+  width: 100%;
+  position: relative;
+  display: flex;
+}
+
+.searchTerm {
+  width: 100%;
+  border-right: none;
+  padding: 5px;
+  /* line-height: 28px; */
+  height: 28px;
+  border-radius: 10px 0 0 10px;
+  outline: none;
+  border: transparent;
+}
+
+input {
+  font-size: 11px;
+}
+
+.searchButton {
+  width: 48px;
+  height: 38px;
+  text-align: center;
+  border-radius: 0 10px 10px 0;
+  cursor: pointer;
+  font-size: 20px;
+  padding: 5px;
+  /* outline: none; */
+  border: transparent;
+  background-color: black;
+  color: white;
+}
+
+/*Resize the wrap to see the search bar change!*/
+.wrap {
+  width: 50%;
+  position: absolute;
+  top: 15%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
